# airbyte-2-terraform-converter

./: .gitignore  README.md  pyproject.toml
configs/: api_config.prod.yml  api_selection.prod.json  config.json
mappings/connection/: airbyte_connection_deprecated_keys.json
mappings/destination/: airbyte_destination_type_2_tf.json
mappings/generic/: tf_sensitive_keys.json  tf_variables.json
mappings/source/: airbyte_source_type_2_tf.json
src/: main.py
src/api_processing/: __init__.py  api_config_loader.py  api_processor.py  get_airbyte_data.py  get_bearer_token.py
src/core_config/: __init__.py  base_settings.py  bootstrap.py  custom_dataclasses.py  custom_enums.py  custom_types.py  dynamic_values.py  root_path.py  static_values.py
src/gen_terra/: __init__.py  terra_gen_core.py  terra_generators.py  use_terra_generators.py
src/utils/: airbyte_utils.py  custom_types_utils.py
templates/: connection.j2  destination.j2  imports.j2  source.j2
terraform_main_files/: main.tf  variables.tf
